--- a/config/neat.yaml
+++ b/config/neat.yaml
@@ -4,8 +4,8 @@
 neat:
   # Structural mutation rates
   # These control how often new nodes and connections are added
-  mutate_add_node_prob: 0.03      # Probability of adding a new hidden node
-  mutate_add_link_prob: 0.05      # Probability of adding a new connection
+  mutate_add_node_prob: 0.08      # Probability of adding a new hidden node (increased for diversity)
+  mutate_add_link_prob: 0.12      # Probability of adding a new connection (increased for diversity)
   mutate_toggle_enable_prob: 0.01 # Probability of toggling a connection on/off
 
   # Weight mutation
@@ -24,13 +24,13 @@ neat:
 
   # Speciation
   # Controls how organisms are grouped into species
-  compat_threshold: 3.0           # Distance threshold for same species
-  disjoint_coeff: 1.0             # Importance of disjoint genes
-  excess_coeff: 1.0               # Importance of excess genes
-  weight_diff_coeff: 0.4          # Importance of weight differences
+  compat_threshold: 1.0           # Distance threshold for same species
+  disjoint_coeff: 2.0             # Importance of disjoint genes (doubled)
+  excess_coeff: 2.0               # Importance of excess genes (doubled)
+  weight_diff_coeff: 0.8          # Importance of weight differences (doubled)
 
   # Species management
-  dropoff_age: 15                 # Generations of no improvement before removal
+  dropoff_age: 25                 # Generations of no improvement before removal (increased for stability)
   survival_thresh: 0.2            # Top fraction of species that survives
   age_significance: 1.0           # How much age affects fitness sharing
 
@@ -53,21 +53,21 @@ brain:
 
 # Evolution tuning notes:
 #
-# For more exploration (diverse solutions):
-#   - Increase compat_threshold (more species, smaller niches)
-#   - Increase mutation rates
-#   - Decrease survival_thresh
+# For more species diversity:
+#   - DECREASE compat_threshold (lower = easier to speciate)
+#   - Increase structural mutation rates (add_node, add_link)
+#   - Increase dropoff_age (give new species time)
 #
-# For faster convergence (exploit good solutions):
-#   - Decrease compat_threshold (fewer species, larger populations)
+# For fewer, larger species:
+#   - INCREASE compat_threshold (higher = harder to speciate)
 #   - Decrease structural mutation rates
-#   - Increase survival_thresh
+#   - Decrease dropoff_age
 #
 # If species go extinct too quickly:
 #   - Increase dropoff_age
-#   - Decrease compat_threshold
+#   - Slightly increase compat_threshold
 #
 # If evolution stagnates:
 #   - Increase structural mutation rates
 #   - Increase weight_mut_power
-#   - Decrease compat_threshold to merge similar species
+#   - Decrease compat_threshold to create more niches
