--- a/config/neat.yaml
+++ b/config/neat.yaml
@@ -4,14 +4,14 @@
 neat:
   # Structural mutation rates
   # These control how often new nodes and connections are added
-  mutate_add_node_prob: 0.08      # Probability of adding a new hidden node (increased for diversity)
-  mutate_add_link_prob: 0.12      # Probability of adding a new connection (increased for diversity)
+  mutate_add_node_prob: 0.12      # Probability of adding a new hidden node (increased for diversity)
+  mutate_add_link_prob: 0.18      # Probability of adding a new connection (increased for diversity)
   mutate_toggle_enable_prob: 0.01 # Probability of toggling a connection on/off
 
   # Weight mutation
   # Controls how connection weights change
   mutate_link_weights_prob: 0.8   # Probability of mutating weights
-  weight_mut_power: 2.5           # Strength of weight perturbations
+  weight_mut_power: 2.0           # Strength of weight perturbations
   mutate_only_prob: 0.25          # Probability of mutating without mating
   mutate_random_trait_prob: 0.1   # Probability of random trait mutation
 
@@ -24,14 +24,14 @@ neat:
 
   # Speciation
   # Controls how organisms are grouped into species
-  compat_threshold: 1.0           # Distance threshold for same species
+  compat_threshold: 1.25          # Distance threshold for same species
   disjoint_coeff: 2.0             # Importance of disjoint genes (doubled)
   excess_coeff: 2.0               # Importance of excess genes (doubled)
   weight_diff_coeff: 0.8          # Importance of weight differences (doubled)
 
   # Species management
-  dropoff_age: 25                 # Generations of no improvement before removal (increased for stability)
-  survival_thresh: 0.2            # Top fraction of species that survives
+  dropoff_age: 15                 # Generations of no improvement before removal (faster turnover)
+  survival_thresh: 0.25           # Top fraction of species that survives
   age_significance: 1.0           # How much age affects fitness sharing
 
   # Population (reference value - actual population managed by simulation)
