Add hall of fame reseeding to preserve proven lineages during population crashes
Previously, when a species dropped to critical levels, the simulation would
spawn entities with random brains (via min_predators/min_prey config). This
undermined evolutionary progress by introducing untrained organisms.

The hall of fame system instead:
- Stores up to 30 successful genomes per species (organisms that reproduced
  or achieved survival milestones)
- Ranks entries by weighted fitness: children*3 + survival*0.1 + kills*2 (pred)
  or foraged*1 (prey)
- Uses tournament selection (k=3) to sample brains when reseeding
- Applies standard mutation to sampled brains for genetic diversity
- Falls back to random brains only during bootstrap (empty hall)

Entry criteria ensure only proven lineages enter: either reproduced at least
once, or survived 60+ seconds with achievement (kill for predator, 0.5 energy
foraged for prey).

The legacy min_predators/min_prey logic is preserved as a fallback when the
hall of fame is disabled via config.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -232,3 +232,33 @@ bookmarks:
     cv_threshold: 0.04       # Coefficient of variation squared threshold
                              # Lower = stricter stability requirement
     stable_windows: 5        # Must maintain stability for this many consecutive windows
+
+# -----------------------------------------------------------------------------
+# Hall of Fame (Intelligent Reseeding)
+# When a species drops to critical levels, reseed from proven lineages instead
+# of random brains. This preserves selection pressure while preventing extinction.
+# -----------------------------------------------------------------------------
+hall_of_fame:
+  enabled: true              # Enable hall of fame reseeding
+  size: 30                   # Maximum entries per kind (prey/predator)
+  reseed_threshold: 2        # Reseed when population drops below this
+  reseed_count: 3            # Number of entities to reseed per check
+  reseed_energy: 0.9         # Initial energy for reseeded entities
+
+  # Fitness calculation weights (weighted score per kind)
+  # Prey:     children * 3.0 + survival_sec * 0.1 + total_foraged * 1.0
+  # Predator: children * 3.0 + survival_sec * 0.1 + kills * 2.0
+  fitness:
+    children_weight: 3.0     # Direct evolutionary fitness
+    survival_weight: 0.1     # Longevity contribution
+    kills_weight: 2.0        # Predator hunting success
+    forage_weight: 1.0       # Prey resource efficiency
+
+  # Entry criteria (organism must meet at least one set)
+  # Primary: reproduced at least once
+  # Secondary: survived long enough AND achieved something
+  entry:
+    min_children: 1          # Primary: reproduced at least once
+    min_survival_sec: 60.0   # Secondary: minimum survival time
+    min_foraging: 0.5        # Secondary (prey): minimum total foraged
+    min_kills: 1             # Secondary (predator): minimum kills
