Add camera system to decouple world size from viewport
The simulation world can now be larger than the screen, with pan/zoom controls
to navigate. This allows entities to form meaningful flocks in a larger space
without being constrained to the visible area.

Key changes:
- Add camera package with pan, zoom, and toroidal world wrapping support
- Add WorldConfig to config (default 2560x1440, 2x screen size)
- Update rendering to transform through camera with visibility culling
- Draw "ghost" copies of entities near world edges for seamless wrapping
- Add camera controls: arrow keys pan, mouse wheel/+/- zoom, Home resets
- Update inspector to use screen-to-world transforms for click detection
- Fix resource grid aspect ratio to match world (ensures square cells)

Camera constraints:
- Minimum zoom prevents showing dead space beyond world bounds
- Pan wraps around toroidal world edges seamlessly

Controls shown in HUD: Zoom level, camera position, and control hints.

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -16,6 +16,14 @@ screen:
   target_fps: 60             # Target frame rate (also affects simulation speed in graphics mode)
 
 # -----------------------------------------------------------------------------
+# World Size (can be larger than screen; use camera to pan/zoom)
+# -----------------------------------------------------------------------------
+world:
+  width: 2560                # World width in world units (0 = use screen width)
+  height: 1440               # World height in world units (0 = use screen height)
+                             # Default is 2x screen size for larger flocking areas
+
+# -----------------------------------------------------------------------------
 # Physics & Simulation
 # -----------------------------------------------------------------------------
 physics:
