Replace CPU resource grid with particle-based mass transport system
Replace the simple CPU resource field with a particle-based system that models
mass transport through the environment. Particles spawn from a potential field,
drift with divergence-free curl noise flow, and exchange mass with a grid that
organisms consume from.

Architecture:
- Potential field P(x,y): slow-evolving FBM determines spawn locations
- Flow field (U,V): curl of scalar FBM creates divergence-free currents  
- Resource grid R: mass density that prey graze from
- Particles: mass packets using RK2 advection, deposit/pickup with grid

Key behaviors:
- Mass conservation: enters via spawn, moves via exchange, exits via grazing
- Deposit: particles gradually release mass to nearby grid cells
- Pickup/entrainment: particles absorb mass from dense grid regions
- Creates natural plumes and nutrient transport patterns

Config changes:
- Add particles section with spawn_rate, deposit_rate, pickup_rate, flow params
- Simplify resource section to only graze_radius, forage_efficiency, contrast
- Remove unused regrow_rate, diffuse, drift_x/y, evolve_interval parameters

--- a/config/defaults.yaml
+++ b/config/defaults.yaml
@@ -153,15 +153,9 @@ energy:
 
 # -----------------------------------------------------------------------------
 # Resource Field
-# Controls the food/grazing resource distribution with depletion and regrowth
+# Controls organism grazing behavior
 # -----------------------------------------------------------------------------
 resource:
-  update_interval: 0         # Ticks between GPU visual updates (0 = use CPU field state)
-  regrow_rate: 0.15          # Resource regrowth per second (~7 sec full recovery)
-  diffuse: 0.01              # Resource diffusion strength per second (minimal)
-  drift_x: 0.02              # Capacity drift in UV units per second (X direction)
-  drift_y: 0.014             # Capacity drift in UV units per second (Y direction)
-  evolve_interval: 2.0       # Seconds between capacity field rebuilds (0 = static patches)
   graze_radius: 1            # Grazing kernel radius in cells (1=3x3 kernel, 2=5x5)
   forage_efficiency: 1.0     # Fraction of removed resource that becomes energy (0-1)
   contrast: 2.0              # FBM contrast exponent (higher = sparser oases, more barren areas)
@@ -276,3 +270,20 @@ hall_of_fame:
     min_survival_sec: 60.0   # Secondary: minimum survival time
     min_foraging: 0.5        # Secondary (prey): minimum total foraged
     min_kills: 1             # Secondary (predator): minimum kills
+
+# -----------------------------------------------------------------------------
+# Particle-Based Resource System
+# Mass-conserving resource transport with particles drifting in a flow field
+# -----------------------------------------------------------------------------
+particles:
+  max_count: 8000            # Maximum particle pool size
+  spawn_rate: 100            # Base particles/sec (scaled by potential field)
+  initial_mass: 0.01         # Mass of newly spawned particle
+  deposit_rate: 2.0          # Fraction of particle mass deposited to grid per sec
+  pickup_rate: 0.5           # Mass pickup rate from grid per sec
+  flow_strength: 40.0        # Flow velocity scale (world units/sec)
+  flow_update_sec: 0.5       # Flow field rebuild interval (seconds)
+  flow_scale: 3.0            # Curl noise frequency
+  flow_octaves: 3            # FBM detail level
+  flow_evolution: 0.08       # Temporal drift rate for flow field
+  pot_update_sec: 2.0        # Potential field rebuild interval (seconds)
